--- a/Vido.Parking.Ui.Wpf/App.xaml
+++ b/Vido.Parking.Ui.Wpf/App.xaml
@@ -1,5 +1,6 @@
 ﻿<Application x:Class="Vido.Parking.Ui.Wpf.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+             StartupUri="MainWindow.xaml"
+             Exit="Application_Exit">
 </Application>
