--- a/Vido.Desktop.Parking/Parking/Ui/App.xaml
+++ b/Vido.Desktop.Parking/Parking/Ui/App.xaml
@@ -1,10 +1,43 @@
-﻿<Application x:Class="Vido.Parking.Ui.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Parking\Ui\MainWindow.xaml"
-             Startup="Application_Startup"
-             Exit="Application_Exit">
-    <Application.Resources>
-         
-    </Application.Resources>
+﻿<Application
+  x:Class="Vido.Parking.Ui.App"
+  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  StartupUri="MainWindow.xaml"
+  Startup="Application_Startup"
+  Exit="Application_Exit">
+
+  <Application.Resources>
+    <Style TargetType="{x:Type Button}" x:Key="VidoButtonStyle">
+      <Setter Property="Background" Value="Orange" />
+      <Setter Property="Foreground" Value="White" />
+      <Setter Property="SnapsToDevicePixels" Value="True" />
+
+      <Setter Property="Template">
+        <Setter.Value>
+          <ControlTemplate TargetType="{x:Type Button}">
+            <Border x:Name="border" CornerRadius="4" BorderThickness="2" BorderBrush="Orange"
+                    Background="{TemplateBinding Background}">
+              <ContentPresenter x:Name="MyContentPresenter" Content="{TemplateBinding Content}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            </Border>
+
+            <ControlTemplate.Triggers>
+              <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Opacity" Value="0.5"/>
+              </Trigger>
+
+              <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="White" />
+                <Setter Property="Foreground" Value="Red" />
+              </Trigger>
+
+              <Trigger Property="IsPressed" Value="True">
+                <Setter Property="Background" Value="OrangeRed" />
+                <Setter Property="Foreground" Value="White" />
+              </Trigger>
+            </ControlTemplate.Triggers>
+          </ControlTemplate>
+        </Setter.Value>
+      </Setter>
+    </Style>
+  </Application.Resources>
 </Application>
